[package]
name = "linear-cli-rs"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "linear"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
colored = "2"
dirs = "5"
inquire = "0.7"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tabled = { version = "0.16", features = ["ansi"] }
tokio = { version = "1", features = ["full"] }
toml = "0.8"
